<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/incenseid_label"
            android:layout_width="0dip"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:id="@+id/textview_incenseid">
        </TextView>

        <EditText
            android:layout_width="0dip"
            android:layout_weight="70"
            android:id="@+id/edittext_incenseid"
            android:layout_height="wrap_content"
            android:inputType="text"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/username_label"
            android:layout_width="0dip"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:id="@+id/textview_username">
        </TextView>

        <EditText
            android:layout_width="0dip"
            android:layout_weight="70"
            android:id="@+id/edittext_username"
            android:layout_height="wrap_content"
            android:inputType="text"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password_label"
            android:layout_width="0dip"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:id="@+id/textview_password"></TextView>

        <EditText
            android:layout_width="0dip"
            android:layout_weight="70"
            android:id="@+id/edittext_password"
            android:password="true"
            android:layout_height="wrap_content"
            android:inputType="textPassword"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password_confirmation_label"
            android:layout_width="0dip"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:id="@+id/textview_password_confirmation"></TextView>

        <EditText
            android:layout_width="0dip"
            android:layout_weight="70"
            android:id="@+id/edittext_password_confirmation"
            android:password="true"
            android:layout_height="wrap_content"
            android:inputType="textPassword"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/email_label"
            android:layout_width="0dip"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:id="@+id/textview_email"></TextView>
        <EditText
            android:layout_width="0dip"
            android:layout_weight="70"
            android:id="@+id/edittext_email"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"></EditText>
    </LinearLayout>

    <TextView
        android:text="@string/required_notice"
        android:layout_marginTop="10dip"
        android:id="@+id/textview_required_notice"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"></TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_label"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true" />
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_label"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true" />
    </LinearLayout>

</LinearLayout>
